fixed the z-index issue

--- a/src/guest/styles/home.scss
+++ b/src/guest/styles/home.scss
@@ -37,7 +37,7 @@ body.dark-mode {
   position: fixed;
   top: 2rem;
   right: 2rem;
-  z-index: 100;
+  z-index: 150;
 
   .theme-btn {
     width: 50px;
